working on Named sheets

--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -57,7 +57,7 @@
       <div class="flexrow">
         {{!-- <div class="box"> --}}
           
-          <div class="box gear">
+          <div class="box item-list">
             <h3>{{localize "ATDC.actor.gear.label"}}</h3>
             <ol class="items-list">
               <li class="item flexrow items-header">
