--- a/templates/actor/parts/actor-main.hbs
+++ b/templates/actor/parts/actor-main.hbs
@@ -53,7 +53,7 @@
         {{/select}}
       </select>
     </div>
-    <div class="box gear">
+    <div class="box item-list gear">
       <h3>{{localize "ATDC.actor.gear.label"}}</h3>
       <p class="description">{{{localize 'ATDC.actor.gear.description'}}}</p>
       <ol class="items-list">
