--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -95,12 +95,7 @@
     }
   }
 
-  .gear,
-  .contact,
-  .power,
-  .compulsion,
-  .deterrent,
-  .vulnerability {
+  .item-list {
     flex: 1;
     align-content: flex-start;
     overflow: hidden;
