fixed some pc and item layout issues

--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -53,7 +53,7 @@
   <section>
 
     {{!--  Tab --}}
-    <div class="main">
+    <div class="nameless_main">
       <div class="flexrow">
         {{!-- <div class="box"> --}}
           
