--- a/templates/actor/actor-named-sheet.hbs
+++ b/templates/actor/actor-named-sheet.hbs
@@ -66,14 +66,13 @@
             <h3>Powers</h3>
             <ol class="items-list">
               <li class="item flexrow items-header">
-                <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
-                <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
-                <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
+                <div class="item-name">Name</div>
+                <div class="item-risk-die">Risk Die?</div>
                 <div class="item-controls">
-                  <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
+                  <a class="item-control item-create" title="Create item" data-type="power"><i class="fas fa-plus"></i></a>
                 </div>
               </li>
-              {{#each gear as |item id|}}
+              {{#each power as |item id|}}
                 <li class="item flexrow" data-item-id="{{item._id}}">
                   <div class="item-name">
                     <div class="item-image">
@@ -81,8 +80,7 @@
                     </div>
                     <h4>{{item.name}}</h4>
                   </div>
-                  <div class="item-tags item-prop">{{item.system.tags}}</div>
-                  <div class="item-load item-prop">{{item.system.load}}</div>
+                  <div class="item-risk-die item-prop">{{item.system.addRiskDie}}</div>
                   <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -122,19 +120,19 @@
             </ol>
           </div>
         </div>
+        
         <div class="flexcol">
           <div class="box item-list">
             <h3>Compulsions</h3>
             <ol class="items-list">
               <li class="item flexrow items-header">
-                <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
-                <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
-                <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
+                <div class="item-name">Name</div>
+                <div class="item-detail">Detail</div>
                 <div class="item-controls">
-                  <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
+                  <a class="item-control item-create" title="Create item" data-type="compulsion"><i class="fas fa-plus"></i></a>
                 </div>
               </li>
-              {{#each gear as |item id|}}
+              {{#each compulsion as |item id|}}
                 <li class="item flexrow" data-item-id="{{item._id}}">
                   <div class="item-name">
                     <div class="item-image">
@@ -142,8 +140,7 @@
                     </div>
                     <h4>{{item.name}}</h4>
                   </div>
-                  <div class="item-tags item-prop">{{item.system.tags}}</div>
-                  <div class="item-load item-prop">{{item.system.load}}</div>
+                  <div class="item-detail item-prop">{{item.system.detail}}</div>
                   <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -157,14 +154,13 @@
             <h3>Deterrents</h3>
             <ol class="items-list">
               <li class="item flexrow items-header">
-                <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
-                <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
-                <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
+                <div class="item-name">Name</div>
+                <div class="item-detail">Detail</div>
                 <div class="item-controls">
-                  <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
+                  <a class="item-control item-create" title="Create item" data-type="deterrent"><i class="fas fa-plus"></i></a>
                 </div>
               </li>
-              {{#each gear as |item id|}}
+              {{#each deterrent as |item id|}}
                 <li class="item flexrow" data-item-id="{{item._id}}">
                   <div class="item-name">
                     <div class="item-image">
@@ -172,8 +168,7 @@
                     </div>
                     <h4>{{item.name}}</h4>
                   </div>
-                  <div class="item-tags item-prop">{{item.system.tags}}</div>
-                  <div class="item-load item-prop">{{item.system.load}}</div>
+                  <div class="item-detail item-prop">{{item.system.detail}}</div>
                   <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -187,14 +182,13 @@
             <h3>Vulnerabilities</h3>
             <ol class="items-list">
               <li class="item flexrow items-header">
-                <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
-                <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
-                <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
+                <div class="item-name">Name</div>
+                <div class="item-detail">Detail</div>
                 <div class="item-controls">
-                  <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
+                  <a class="item-control item-create" title="Create item" data-type="vulnerability"><i class="fas fa-plus"></i></a>
                 </div>
               </li>
-              {{#each gear as |item id|}}
+              {{#each vulnerability as |item id|}}
                 <li class="item flexrow" data-item-id="{{item._id}}">
                   <div class="item-name">
                     <div class="item-image">
@@ -202,8 +196,7 @@
                     </div>
                     <h4>{{item.name}}</h4>
                   </div>
-                  <div class="item-tags item-prop">{{item.system.tags}}</div>
-                  <div class="item-load item-prop">{{item.system.load}}</div>
+                  <div class="item-detail item-prop">{{item.system.detail}}</div>
                   <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
