--- a/templates/actor/parts/actor-relationships.hbs
+++ b/templates/actor/parts/actor-relationships.hbs
@@ -2,26 +2,27 @@
   <div class="flexcol">
     <div class="box anchor">
       <h3>{{localize "ATDC.actor.relationships.yourAnchor.label"}}</h3>
-      <input type="text" placeholder="{{localize "ATDC.actor.relationships.yourAnchor.name.placeholder"}}" name="system.anchor.name" value="{{system.anchor.name}}">
-      <input type="text" placeholder="{{localize "ATDC.actor.relationships.yourAnchor.relationship.placeholder"}}" name="system.anchor.relationship" value="{{system.anchor.relationship}}">
-      <div class="flexrow taken">
-        <label for="target">{{localize "ATDC.actor.relationships.yourAnchor.target.label"}}</label>
-        <input id="target" type="checkbox" name="system.anchor.target" {{checked system.anchor.target}}>
-        <label for="missing">{{localize "ATDC.actor.relationships.yourAnchor.missing.label"}}</label>
-        <input id="missing" type="checkbox" name="system.anchor.missing" {{checked system.anchor.missing}}>
-        <label for="taken">{{localize "ATDC.actor.relationships.yourAnchor.taken.label"}}</label>
-        <input id="taken" type="checkbox" name="system.anchor.taken" {{checked system.anchor.taken}}>
+      <div class="box-body">
+        <input type="text" placeholder="{{localize "ATDC.actor.relationships.yourAnchor.name.placeholder"}}" name="system.anchor.name" value="{{system.anchor.name}}">
+        <input type="text" placeholder="{{localize "ATDC.actor.relationships.yourAnchor.relationship.placeholder"}}" name="system.anchor.relationship" value="{{system.anchor.relationship}}">
+        <div class="flexrow taken">
+          <label for="target">{{localize "ATDC.actor.relationships.yourAnchor.target.label"}}</label>
+          <input id="target" type="checkbox" name="system.anchor.target" {{checked system.anchor.target}}>
+          <label for="missing">{{localize "ATDC.actor.relationships.yourAnchor.missing.label"}}</label>
+          <input id="missing" type="checkbox" name="system.anchor.missing" {{checked system.anchor.missing}}>
+          <label for="taken">{{localize "ATDC.actor.relationships.yourAnchor.taken.label"}}</label>
+          <input id="taken" type="checkbox" name="system.anchor.taken" {{checked system.anchor.taken}}>
+        </div>
+        <p><i>{{localize "ATDC.actor.relationships.yourAnchor.details.label"}}</i></p>
+        <textarea type="text" name="system.anchor.details" value="{{system.anchor.details}}">{{system.anchor.details}}</textarea>
       </div>
-      <p><i>{{localize "ATDC.actor.relationships.yourAnchor.details.label"}}</i></p>
-      <textarea type="text" name="system.anchor.details" value="{{system.anchor.details}}">{{system.anchor.details}}</textarea>
     </div>
 
     <div class="box">
       <div class="flexrow contacts-header">
         <h3 class="flexrow">{{localize "ATDC.actor.relationships.contacts.label"}} <a class="item-control item-create" title="Create item" data-type="contact"><i class="fas fa-plus"></i> {{localize "ATDC.item.contactList.call.label"}}</a></h3>
-        
       </div>
-      <ol class="items-list">
+      <ol class="items-list box-body">
         <li class="item flexrow items-header">
           <div class="item-name">{{localize "ATDC.item.contactList.name.label"}}</div>
           <div class="item-blown">{{localize "ATDC.item.contactList.blown.label"}}</div>
@@ -58,18 +59,18 @@
   <div class="flexcol">
     <div class="box">
       <h3>{{localize "ATDC.actor.relationships.teamMembers.label"}}</h3>
+      <div class="box-body">
+        <p><i>{{localize "ATDC.actor.relationships.teamMembers.careMost.label"}}</i></p>
+        <input type="text" placeholder="{{localize "ATDC.actor.relationships.teamMembers.careMost.name.placeholder"}}" name="system.team.careMostName" value="{{system.team.careMostName}}">
+        <p><i>{{localize "ATDC.actor.relationships.teamMembers.careMost.details.label"}}</i></p>
+        <textarea type="text" name="system.team.careMostDetails" value="{{system.team.careMostDetails}}">{{system.team.careMostDetails}}</textarea>
+        <hr>
 
-      <p><i>{{localize "ATDC.actor.relationships.teamMembers.careMost.label"}}</i></p>
-      <input type="text" placeholder="{{localize "ATDC.actor.relationships.teamMembers.careMost.name.placeholder"}}" name="system.team.careMostName" value="{{system.team.careMostName}}">
-      <p><i>{{localize "ATDC.actor.relationships.teamMembers.careMost.details.label"}}</i></p>
-      <textarea type="text" name="system.team.careMostDetails" value="{{system.team.careMostDetails}}">{{system.team.careMostDetails}}</textarea>
-      <hr>
-
-      <p><i>{{localize "ATDC.actor.relationships.teamMembers.careLeast.label"}}</i></p>
-      <input type="text" placeholder="{{localize "ATDC.actor.relationships.teamMembers.careLeast.name.placeholder"}}" name="system.team.careLeastName" value="{{system.team.careLeastName}}">
-      <p><i>{{localize "ATDC.actor.relationships.teamMembers.careLeast.details.label"}}</i></p>
-      <textarea type="text" name="system.team.careLeastDetails" value="{{system.team.careLeastDetails}}">{{system.team.careLeastDetails}}</textarea>
-
+        <p><i>{{localize "ATDC.actor.relationships.teamMembers.careLeast.label"}}</i></p>
+        <input type="text" placeholder="{{localize "ATDC.actor.relationships.teamMembers.careLeast.name.placeholder"}}" name="system.team.careLeastName" value="{{system.team.careLeastName}}">
+        <p><i>{{localize "ATDC.actor.relationships.teamMembers.careLeast.details.label"}}</i></p>
+        <textarea type="text" name="system.team.careLeastDetails" value="{{system.team.careLeastDetails}}">{{system.team.careLeastDetails}}</textarea>
+      </div>
     </div>
   </div>
 </div>
