--- a/scss/components/_characters.scss
+++ b/scss/components/_characters.scss
@@ -89,22 +89,9 @@
       }
 
       .intel-load-box {
-        h3 {
-          margin: 0;
-        }
 
         h4 {
           margin: 0;
-        }
-
-        hr {
-          flex-grow: 0;
-          width: -webkit-fill-available;
-          margin: 0;
-          padding: 0;
-          border: none;
-          border-top: 1px solid black;
-          margin: 5px 0 5px 0;
         }
 
         .intel {
@@ -185,41 +172,48 @@
         }
       }
 
-      .expertise-grid {
-        display: grid;
-        grid-template-columns: minmax(20px, 1fr) 10px minmax(20px, 1fr);
-        grid-template-rows: repeat(5, minmax(10px, 1fr));
-        grid-column-gap: 5px;
-        row-gap: 5px;
+      .expertise {
         flex-grow: 0;
 
-        h3 {
-          margin: 0;
+        .expertise-grid-header {
+          display: grid;
+          grid-template-columns: minmax(20px, 1fr) 10px minmax(20px, 1fr);
+          grid-column-gap: 5px;
+          flex-grow: 0;
         }
 
-        select {
-          min-width: 0;
-          max-width: 100%;
-        }
-
-        .specialism {
-          flex-wrap: nowrap;
-
-          input[type="checkbox"] {
-            margin-left: 0;
-            margin-right: 2px;
-            flex-grow: 0;
+        .expertise-grid {
+          display: grid;
+          grid-template-columns: minmax(20px, 1fr) 10px minmax(20px, 1fr);
+          grid-template-rows: repeat(4, minmax(10px, 1fr));
+          grid-column-gap: 5px;
+          row-gap: 5px;
+          flex-grow: 0;
+  
+          select {
+            min-width: 0;
+            max-width: 100%;
           }
-        }
-
-        .expertise-available {
-          label {
-            flex-grow: 1;
+  
+          .specialism {
+            flex-wrap: nowrap;
+  
+            input[type="checkbox"] {
+              margin-left: 0;
+              margin-right: 2px;
+              flex-grow: 0;
+            }
           }
-
-          div {
-            flex-grow: 3;
-            align-self: center;
+  
+          .expertise-available {
+            label {
+              flex-grow: 1;
+            }
+  
+            div {
+              flex-grow: 3;
+              align-self: center;
+            }
           }
         }
       }
