--- a/templates/actor/actor-supernatural-sheet.hbs
+++ b/templates/actor/actor-supernatural-sheet.hbs
@@ -57,10 +57,39 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
+
     {{!-- Main Tab --}}
     <div class="tab main" data-group="primary" data-tab="main">
       <div class="flexrow">
         <div class="flexcol">
+          <div class="box item-list">
+            <h3>Powers</h3>
+            <ol class="items-list box-body">
+              <li class="item flexrow items-header">
+                <div class="item-name">Name</div>
+                <div class="item-risk-die">Risk Die?</div>
+                <div class="item-controls">
+                  <a class="item-control item-create" title="Create item" data-type="power"><i class="fas fa-plus"></i></a>
+                </div>
+              </li>
+              {{#each power as |item id|}}
+                <li class="item flexrow" data-item-id="{{item._id}}">
+                  <div class="item-name">
+                    <div class="item-image">
+                      <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                    </div>
+                    <h4>{{item.name}}</h4>
+                  </div>
+                  <div class="item-risk-die item-prop">{{item.system.addRiskDie}}</div>
+                  <div class="item-controls">
+                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                  </div>
+                </li>
+              {{/each}}
+            </ol>
+          </div>
+
           <div class="box item-list">
             <h3>{{localize "ATDC.actor.gear.label"}}</h3>
             <ol class="items-list box-body">
@@ -90,18 +119,84 @@
               {{/each}}
             </ol>
           </div>
-          
+        </div>
+        
+        <div class="flexcol">
+          <div class="flexcol box">
+            <h3>Weaknesses</h3>
+            <div class="box-body">
+              <div class="item-list">
+                <h4>Compulsions</h4>
+                <ol class="items-list">
+                  <li class="item flexrow items-header">
+                    <div class="item-name">Name</div>
+                    <div class="item-detail">Detail</div>
+                    <div class="item-controls">
+                      <a class="item-control item-create" title="Create item" data-type="compulsion"><i class="fas fa-plus"></i></a>
+                    </div>
+                  </li>
+                  {{#each compulsion as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                      <div class="item-name">
+                        <div class="item-image">
+                          <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                        </div>
+                        <h4>{{item.name}}</h4>
+                      </div>
+                      <div class="item-detail item-prop">{{item.system.detail}}</div>
+                      <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                      </div>
+                    </li>
+                  {{/each}}
+                </ol>
+              </div>
+
+              <hr>
+
+              <div class="item-list">
+                <h4>Deterrents</h4>
+                <ol class="items-list">
+                  <li class="item flexrow items-header">
+                    <div class="item-name">Name</div>
+                    <div class="item-detail">Detail</div>
+                    <div class="item-controls">
+                      <a class="item-control item-create" title="Create item" data-type="deterrent"><i class="fas fa-plus"></i></a>
+                    </div>
+                  </li>
+                  {{#each deterrent as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                      <div class="item-name">
+                        <div class="item-image">
+                          <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                        </div>
+                        <h4>{{item.name}}</h4>
+                      </div>
+                      <div class="item-detail item-prop">{{item.system.detail}}</div>
+                      <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                      </div>
+                    </li>
+                  {{/each}}
+                </ol>
+              </div>
+            </div>
+
+          </div>
+
           <div class="box item-list">
-            <h3>Powers</h3>
+            <h3>Vulnerabilities</h3>
             <ol class="items-list box-body">
               <li class="item flexrow items-header">
                 <div class="item-name">Name</div>
-                <div class="item-risk-die">Risk Die?</div>
+                <div class="item-detail">Detail</div>
                 <div class="item-controls">
-                  <a class="item-control item-create" title="Create item" data-type="power"><i class="fas fa-plus"></i></a>
+                  <a class="item-control item-create" title="Create item" data-type="vulnerability"><i class="fas fa-plus"></i></a>
                 </div>
               </li>
-              {{#each power as |item id|}}
+              {{#each vulnerability as |item id|}}
                 <li class="item flexrow" data-item-id="{{item._id}}">
                   <div class="item-name">
                     <div class="item-image">
@@ -109,7 +204,7 @@
                     </div>
                     <h4>{{item.name}}</h4>
                   </div>
-                  <div class="item-risk-die item-prop">{{item.system.addRiskDie}}</div>
+                  <div class="item-detail item-prop">{{item.system.detail}}</div>
                   <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -118,70 +213,6 @@
               {{/each}}
             </ol>
           </div>
-        </div>
-        
-        <div class="flexcol box ">
-          <h3>Weaknesses</h3>
-          <div class="box-body">
-            <div class="item-list">
-              <h4>Compulsions</h4>
-              <ol class="items-list">
-                <li class="item flexrow items-header">
-                  <div class="item-name">Name</div>
-                  <div class="item-detail">Detail</div>
-                  <div class="item-controls">
-                    <a class="item-control item-create" title="Create item" data-type="compulsion"><i class="fas fa-plus"></i></a>
-                  </div>
-                </li>
-                {{#each compulsion as |item id|}}
-                  <li class="item flexrow" data-item-id="{{item._id}}">
-                    <div class="item-name">
-                      <div class="item-image">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-                      </div>
-                      <h4>{{item.name}}</h4>
-                    </div>
-                    <div class="item-detail item-prop">{{item.system.detail}}</div>
-                    <div class="item-controls">
-                      <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                      <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                    </div>
-                  </li>
-                {{/each}}
-              </ol>
-            </div>
-
-            <hr>
-
-            <div class="item-list">
-              <h4>Deterrents</h4>
-              <ol class="items-list">
-                <li class="item flexrow items-header">
-                  <div class="item-name">Name</div>
-                  <div class="item-detail">Detail</div>
-                  <div class="item-controls">
-                    <a class="item-control item-create" title="Create item" data-type="deterrent"><i class="fas fa-plus"></i></a>
-                  </div>
-                </li>
-                {{#each deterrent as |item id|}}
-                  <li class="item flexrow" data-item-id="{{item._id}}">
-                    <div class="item-name">
-                      <div class="item-image">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-                      </div>
-                      <h4>{{item.name}}</h4>
-                    </div>
-                    <div class="item-detail item-prop">{{item.system.detail}}</div>
-                    <div class="item-controls">
-                      <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                      <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                    </div>
-                  </li>
-                {{/each}}
-              </ol>
-            </div>
-          </div>
-
         </div>
       </div>
       
