--- a/templates/actor/parts/actor-main.hbs
+++ b/templates/actor/parts/actor-main.hbs
@@ -1,87 +1,93 @@
 <div class="main flexrow">
   <div class="main-left flexcol">
-    <div class="box expertise-grid">
-      <h3>{{localize "ATDC.actor.expertise.professionalHistory.label"}}</h3>
-      <div><!-- empty --></div>
-      <!-- <div class="flexrow expertise-header"> -->
+    <div class="box expertise">
+      <div class="expertise-grid-header">
+        <h3>{{localize "ATDC.actor.expertise.professionalHistory.label"}}</h3>
+        <div><!-- empty --></div>
         <h3>{{localize "ATDC.actor.expertise.label"}} <a class="clickable" data-roll-type="info-expertise" title="info"><i class="fa-regular fa-xs fa-circle-info"></i></a></h3>
-      <!-- </div> -->
-      <input class="underline-input" type="text" id="nation-org" name="system.nationOrganization" value="{{system.nationOrganization}}" placeholder="{{localize "ATDC.actor.expertise.nationOrganisation.placeholder"}}">
-      <div><!-- empty --></div>
-      <input class="underline-input" type="text" id="init-expertise" value="{{localize "ATDC.actor.expertise.initial.value"}}" disabled>
-      <!-- workedFor -->
-      <select name="system.expertise.workedFor.index" data-type="String">
-        {{#select system.expertise.workedFor.index}}
-          {{#each system.expertise.workedFor.options as |option key|}}
-            <option value="{{key}}">{{localize option.question}}</option>
-          {{/each}}
-        {{/select}}
-      </select>
-      <div><i class="fa-solid fa-caret-right"></i></div>
-      <input class="underline-input" type="text" value="{{system.expertise.workedFor.answer}}" disabled>
-      <!-- specialism -->
-      <div class="specialism flexrow">
-        <input type="checkbox" name="system.expertise.specialism.used" {{checked system.expertise.specialism.used}}>
-        <select name="system.expertise.specialism.index">
-          {{#select system.expertise.specialism.index}}
-            {{#each system.expertise.specialism.options as |option key|}}
+      </div>
+
+      <div class="expertise-grid box-body">
+        <input class="underline-input" type="text" id="nation-org" name="system.nationOrganization" value="{{system.nationOrganization}}" placeholder="{{localize "ATDC.actor.expertise.nationOrganisation.placeholder"}}">
+        <div><!-- empty --></div>
+        <input class="underline-input" type="text" id="init-expertise" value="{{localize "ATDC.actor.expertise.initial.value"}}" disabled>
+        <!-- workedFor -->
+        <select name="system.expertise.workedFor.index" data-type="String">
+          {{#select system.expertise.workedFor.index}}
+            {{#each system.expertise.workedFor.options as |option key|}}
               <option value="{{key}}">{{localize option.question}}</option>
             {{/each}}
           {{/select}}
         </select>
+        <div><i class="fa-solid fa-caret-right"></i></div>
+        <input class="underline-input" type="text" value="{{system.expertise.workedFor.answer}}" disabled>
+        <!-- specialism -->
+        <div class="specialism flexrow">
+          <input type="checkbox" name="system.expertise.specialism.used" {{checked system.expertise.specialism.used}}>
+          <select name="system.expertise.specialism.index">
+            {{#select system.expertise.specialism.index}}
+              {{#each system.expertise.specialism.options as |option key|}}
+                <option value="{{key}}">{{localize option.question}}</option>
+              {{/each}}
+            {{/select}}
+          </select>
+        </div>
+        <div><i class="fa-solid fa-caret-right"></i></div>
+        <input class="underline-input" type="text" value="{{system.expertise.specialism.answer}}" disabled>
+        
+        <!-- expertise-available -->
+        <div class="flexrow expertise-available">
+          <div>{{localize "ATDC.actor.expertise.available.label"}}</div>
+          <label class="switch">
+            <input type="checkbox" name="system.expertise.expertiseUsed" {{checked system.expertise.expertiseUsed}}>
+            <span class="slider round"></span>
+          </label>
+        </div>
+        
+        <div><!-- empty --></div>
+        
+        <!-- final expertise -->
+        <select name="system.expertise.final.index">
+          {{#select system.expertise.final.index}}
+            {{#each system.expertise.final.options as |option key|}}
+              <option value="{{key}}">{{localize option}}</option>
+            {{/each}}
+          {{/select}}
+        </select>
       </div>
-      <div><i class="fa-solid fa-caret-right"></i></div>
-      <input class="underline-input" type="text" value="{{system.expertise.specialism.answer}}" disabled>
-      
-      <!-- expertise-available -->
-      <div class="flexrow expertise-available">
-        <div>{{localize "ATDC.actor.expertise.available.label"}}</div>
-        <label class="switch">
-          <input type="checkbox" name="system.expertise.expertiseUsed" {{checked system.expertise.expertiseUsed}}>
-          <span class="slider round"></span>
-        </label>
-      </div>
-      
-      <div><!-- empty --></div>
-      
-      <!-- final expertise -->
-      <select name="system.expertise.final.index">
-        {{#select system.expertise.final.index}}
-          {{#each system.expertise.final.options as |option key|}}
-            <option value="{{key}}">{{localize option}}</option>
-          {{/each}}
-        {{/select}}
-      </select>
     </div>
+    
     <div class="box item-list gear">
       <h3>{{localize "ATDC.actor.gear.label"}}</h3>
-      <p class="description">{{{localize 'ATDC.actor.gear.description'}}}</p>
-      <ol class="items-list">
-        <li class="item flexrow items-header">
-          <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
-          <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
-          <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
-          <div class="item-controls">
-            <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
-          </div>
-        </li>
-        {{#each gear as |item id|}}
-          <li class="item flexrow" data-item-id="{{item._id}}">
-            <div class="item-name">
-              <div class="item-image">
-                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-              </div>
-              <h4>{{item.name}}</h4>
-            </div>
-            <div class="item-tags item-prop">{{item.system.tags}}</div>
-            <div class="item-load item-prop">{{item.system.load}}</div>
+      <div class="box-body">
+        <p class="description">{{{localize 'ATDC.actor.gear.description'}}}</p>
+        <ol class="items-list">
+          <li class="item flexrow items-header">
+            <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
+            <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
+            <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
             <div class="item-controls">
-              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
             </div>
           </li>
-        {{/each}}
-      </ol>
+          {{#each gear as |item id|}}
+            <li class="item flexrow" data-item-id="{{item._id}}">
+              <div class="item-name">
+                <div class="item-image">
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                </div>
+                <h4>{{item.name}}</h4>
+              </div>
+              <div class="item-tags item-prop">{{item.system.tags}}</div>
+              <div class="item-load item-prop">{{item.system.load}}</div>
+              <div class="item-controls">
+                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              </div>
+            </li>
+          {{/each}}
+        </ol>
+      </div>
     </div>
   </div>
 
@@ -139,8 +145,8 @@
     </div>
 
     <hr> <!-- Seek Releif from the Horror -->
-    
     <p class="seek-relief-info">{{localize "ATDC.actor.seekRelief.info"}}</p>
+
     <div class="collapsable box">
       <a class="clickable float" data-roll-type="behaveBadly" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
