--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -129,4 +129,56 @@
   .sheet-body .tab .notes .editor {
     height: 225px;
   }
+
+  .safe-house-header {
+    align-items: center;
+
+    .target {
+      align-items: center;
+      justify-content: center;
+      padding-left: 20px;
+      padding-right: 20px;
+      width: -webkit-fill-available;
+      margin-bottom: 17px;
+      
+      label {
+        flex: unset;
+        text-align: center;
+        align-self: center;
+      }
+  
+      input[type="checkbox"] {
+        flex: unset;
+      }
+    }
+
+    .gear-benefit {
+      margin: 0;
+      width: -webkit-fill-available;
+
+      .grid {
+        margin: 0;
+        justify-items: center;
+      }
+    }
+  }
+  
+  .main-left {
+    flex-grow: 2;
+
+    .bottom-margin {
+      margin-bottom: 10px;
+    }
+  }
+
+  .safe-house-notes {
+
+    .editor {
+      height: 310px;
+      border-radius: 5px;
+      border: 2px solid #00000047;
+      padding: 0 5px 0 5px;
+      background: rgba(0, 0, 0, 0.05);
+    }
+  }
 }
