--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="type flexrow">
-            <h4>Type</h4>
+            <h4>{{localize "ATDC.npc.type.label"}}</h4>
             <select class="npc-type-change" name="system.type.index" data-roll-type="toggle-stress" data-npc-type="nameless" data-type="String">
               {{#select system.type.index}}
                 {{#each system.type.options as |option key|}}
