--- a/templates/panel/heat-panel.hbs
+++ b/templates/panel/heat-panel.hbs
@@ -5,6 +5,6 @@
                 <div class="spoke" style="--index: {{ this }}"></div>
             {{/each}}
         </div>
-        <div class="name on-click-clear">HEAT</div>
+        <div class="name on-click-clear">{{heatTitle}}</div>
     </div>
 </section>
