--- a/templates/msg/harm-chat-content.hbs
+++ b/templates/msg/harm-chat-content.hbs
@@ -1,4 +1,4 @@
-<form>
+<div>
     <p style="font-size: 1.5em"><b>{{{moveName}}}</b> {{localize "ATDC.actor.actions.chat.result.label"}}</p>
     <p>{{{diceOutput}}}</p>
     <b>{{localize "ATDC.actor.actions.chat.result.harm.modifier.label"}}</b> {{{bonusValue}}}
@@ -7,4 +7,4 @@
     <hr>
     {{{maxDieMessage}}}
     {{{stressMessage}}}
-</form>
+</di>
