--- a/templates/msg/stress-chat-content.hbs
+++ b/templates/msg/stress-chat-content.hbs
@@ -1,4 +1,4 @@
-<form>
+<div>
     {{{stressValMessage}}}
     <p>
         <span style="font-size: 1.5em;">
@@ -7,4 +7,4 @@
     </p>
     <hr>
     <span style="font-size: 1.2em;">{{{stressMessage}}}</span>
-</form>
+</div>
