--- a/templates/msg/action-chat-content.hbs
+++ b/templates/msg/action-chat-content.hbs
@@ -7,6 +7,6 @@
     {{{harmMessage}}}
     {{#if showStressOnSix}}
         <br>
-        <button type="button" class="roll-stress"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.stress.title"}}</button>
+        <button type="button" class="roll-stress"><i class="fa-regular fa-dice"></i>{{{stressOnSixMessage}}}</button>
     {{/if}}
 </div>
