got heat increasing based on rolls working

--- a/templates/msg/harm-chat-roll-msg.hbs
+++ b/templates/msg/harm-chat-roll-msg.hbs
@@ -2,5 +2,5 @@
 <div style="font-size: 1em" class="action" data-owner-id="{{ownerId}}">
     You suffer a <b><i>Harmful Consequence!</i></b> Roll to find out how bad it is.
     </br>
-    <button type="button" class="roll-harm"><i class="fa-regular fa-dice"></i><b><i style="color: {{{takeThemOutDieColor}}}">Roll for Harm</i></b></button>
+    <button type="button" class="roll-harm"><b style="color: {{{takeThemOutDieColor}}}"><i class="fa-regular fa-dice"></i> <i>Roll for Harm</i></b></button>
 <div>
