working on added heat levels

--- a/templates/panel/heat-panel.hbs
+++ b/templates/panel/heat-panel.hbs
@@ -5,6 +5,9 @@
                 <div class="spoke" style="--index: {{ this }}"></div>
             {{/each}}
         </div>
-        <div class="name on-click-clear">{{heatTitle}}</div>
+        <div class="name on-click-clear flexcol">
+            {{heatTitle}}
+            <span class="sub-header">Suspicious</span>
+        </div>
     </div>
 </section>
