--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -133,15 +133,21 @@
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: row-reverse;
-    height: 44px;
+    height: 50px;
     border-radius: 5px 22px 22px 5px;
 
     .name {
       padding: 0 10px 0 10px;
       color: #eb7602;
-      font-size: 2em;
+      font-size: 1.75em;
       align-self: center;
       margin: 0;
+      line-height: 70%;
+
+      .sub-header {
+        color: #ffffff;
+        font-size: 0.5em;
+      }
     }
 
     .clock {
